# hrm-backend

./: .gitignore  db.sqlite3  pyproject.toml  requirements.txt
apps/: urls.py
apps/abstract/: base_models.py
apps/authentication/: serializers.py  urls.py
apps/authentication/serializers/: __init__.py  login.py
apps/authentication/tests/: test_auth.py
apps/authentication/views/: __init__.py  login.py  logout.py  refresh.py
apps/department/: models.py  urls.py
apps/department/migrations/: 0001_initial.py  0002_alter_department_table.py  0002_department_is_active_department_max_employee.py  0003_department_leader.py  0004_remove_department_leader_department_head.py  0005_rename_descreption_department_description.py
apps/department/repository/: __init__.py  department.py
apps/department/serializers/: __init__.py  create_update.py  detail.py  list.py
apps/department/services/: __init__.py  department.py
apps/department/views/: __init__.py  base.py  create.py  detail.py  list.py
apps/employee/: models.py  urls.py  validators.py
apps/employee/migrations/: 0001_initial.py  (+5 more)
apps/organization/: models.py  serializers.py  urls.py
apps/position/: models.py  serializers.py
apps/rbac/: admin.py
apps/subscription/: apps.py  signals.py
apps/subscription_plan/: apps.py  models.py
apps/users/: backends.py  managers.py  models.py  signals.py  urls.py  validators.py
arxiv/organization/: models.py  signals.py
arxiv/subscription/: models.py
hrm/: settings.py  urls.py
orm/: __init__.py  repository.py  services.py
utils/: choices.py  directory.py
(+50 files in other folders)
